--- a/wolibrary/src/main/res/values/colors.xml
+++ b/wolibrary/src/main/res/values/colors.xml
@@ -1,2 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <color name="brand_01">#ffdc00</color> <!--255 220 0 -->
+    <color name="bold_brand_01">#E5C403</color>
+    <color name="brand_02">#000000</color> <!-- 0 0 0 -->
+    <color name="brand_03">#1b9a9d</color> <!-- 27 154 157 -->
+    <color name="ui_01">#ffffff</color> <!-- 255 255 255 -->
+    <color name="ui_02">#e9e9e9</color> <!-- 233 233 233 -->
+    <color name="ui_03">#dddddd</color> <!-- 221 221 221 -->
+    <color name="ui_04">#b2b2b2</color> <!-- 178 178 178 -->
+    <color name="ui_05">#191919</color> <!-- 25 25 25 -->
+    <color name="text_01">#2b2b2b</color> <!-- 43 43 43 -->
+    <color name="text_02">#4b4b4b</color> <!-- 75 75 75 -->
+    <color name="text_03">#b2b2b2</color> <!-- 178 178 178 -->
+    <color name="success">@color/brand_03</color> <!-- 27 154 157 -->
+    <color name="warning">#f8c438</color> <!-- 248 196 55 -->
+    <color name="error">#da1b1b</color> <!-- 218 27 27 -->
+    <color name="neutral">#007aff</color> <!-- 0 122 255 -->
+    <color name="success_bg">#e1f2f3</color> <!-- 27 154 157 -->
+    <color name="warning_bg">#fef5dc</color> <!-- 248 196 55 -->
+    <color name="error_bg">#fff2f2</color> <!-- 255 242 242 -->
+    <color name="neutral_bg">#e7f4ff</color>  <!-- 227 242 255 -->
+    <color name="ui_02_50_percent">#80e9e9e9</color> <!-- 233 233 233 -->
+    <color name="indicator_color">#F8C437</color>
+
+    <color name="main_theme">#fedc00</color>
+    <color name="main_theme_94">#c8fedc00</color>
+    <color name="blur_main_theme">#e6fedc00</color>
+    <color name="main_theme_selected">#e9ca00</color>
+    <color name="text_theme_color">@color/brand_02</color>
+    <color name="control_normal">@color/text_theme_color</color>
+    <color name="text_title">@color/text_theme_color</color>
+    <color name="transparent">#00000000</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="white_80">#ccffffff</color>
+
+</resources>
