--- a/wolibrary/src/main/res/values/primary_styles.xml
+++ b/wolibrary/src/main/res/values/primary_styles.xml
@@ -2,6 +2,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="SpUsage">
 
     <!-- Base application theme. -->
+
+    <style name="AppTheme.Widget.ActionButton" parent="Base.ThemeOverlay.AppCompat.ActionBar">
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="Theme.Wonolo" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowNoTitle" tools:ignore="NewApi">true</item>
         <item name="windowNoTitle">true</item>
